Textfältet rensas vid omstart
Vissa webbläsare cachar det tydligen

--- a/zpel.html
+++ b/zpel.html
@@ -81,6 +81,7 @@
             let gammalLangd = 0;
             
             valjSlumpmassigt();
+            document.getElementById("indata").value = ""; //Tydligen rensar inte alla webbläsare textfältet vid omladdning
             
             function kontrollera() {
                 let indata = document.getElementById("indata").value;
